--- a/404.html
+++ b/404.html
@@ -1,6 +1,8 @@
 ---
 layout: default
+title: "404 - Page Not Found"
 permalink: 404.html
+nav_exclude: true
 ---
 
 <style type="text/css" media="screen">
