--- a/all.html
+++ b/all.html
@@ -3,4 +3,4 @@ layout: page
 title: All
 ---
 
-{% include eiptable.html eips=site.specs %}
+{% include eiptable.html eips=site.pages|where:"lang","en" %}
