--- a/core.html
+++ b/core.html
@@ -3,5 +3,5 @@ layout: page
 title: Core
 ---
 
-{% assign eips=site.specs|where:"type","Standards Track"|where:"category","Core" %}
+{% assign eips=site.pages|where:"lang","en"|where:"type","Standards Track"|where:"category","Core" %}
 {% include eiptable.html eips=eips %}
