--- a/erc.html
+++ b/erc.html
@@ -3,5 +3,5 @@ layout: page
 title: ERC
 ---
 
-{% assign eips=site.specs|where:"type","Standards Track"|where:"category","ERC" %}
+{% assign eips=site.pages|where:"lang","en"|where:"type","Standards Track"|where:"category","ERC" %}
 {% include eiptable.html eips=eips %}
