--- a/all.html
+++ b/all.html
@@ -3,4 +3,5 @@ layout: page
 title: All
 ---
 
-{% include eiptable.html eips=site.pages|where:"lang","en" %}
+{% assign eips=site.pages|where:"lang","en" %}
+{% include eiptable.html eips=eips %}
