--- a/informational.html
+++ b/informational.html
@@ -3,5 +3,5 @@ layout: page
 title: Informational
 ---
 
-{% assign eips=site.specs|where:"type","Informational" %}
+{% assign eips=site.specs|where:"lang","en"|where:"type","Informational" %}
 {% include eiptable.html eips=eips %}
