--- a/interface.html
+++ b/interface.html
@@ -3,5 +3,5 @@ layout: page
 title: Interface
 ---
 
-{% assign eips=site.specs|where:"type","Standards Track"|where:"category","Interface" %}
+{% assign eips=site.specs|where:"lang","en"|where:"type","Standards Track"|where:"category","Interface" %}
 {% include eiptable.html eips=eips %}
