--- a/meta.html
+++ b/meta.html
@@ -3,5 +3,5 @@ layout: page
 title: Meta
 ---
 
-{% assign eips=site.specs|where:"type","Meta" %}
+{% assign eips=site.specs|where:"lang","en"|where:"type","Meta" %}
 {% include eiptable.html eips=eips %}
